fixed overflow issue that was causing main UI container to show white bars on right and bottom sides

--- a/src/components/ContentManager/ContentManager.scss
+++ b/src/components/ContentManager/ContentManager.scss
@@ -1,6 +1,6 @@
 .Content {
   > * {
     height: 100%;
-    overflow: scroll;
+    overflow: auto;
   }
 }
